--- a/ChatterPairProgramming/ChatterPairProgramming.csproj
+++ b/ChatterPairProgramming/ChatterPairProgramming.csproj
@@ -288,12 +288,28 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UserInfoesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610271515171_InitialCreate.cs" />
+    <Compile Include="Migrations\201610271515171_InitialCreate.Designer.cs">
+      <DependentUpon>201610271515171_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610271528087_UserInfor.cs" />
+    <Compile Include="Migrations\201610271528087_UserInfor.Designer.cs">
+      <DependentUpon>201610271528087_UserInfor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610271545039_UpdateUserInfoTBL.cs" />
+    <Compile Include="Migrations\201610271545039_UpdateUserInfoTBL.Designer.cs">
+      <DependentUpon>201610271545039_UpdateUserInfoTBL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Follower.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -371,6 +387,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\UserInfoes\Create.cshtml" />
+    <Content Include="Views\UserInfoes\Delete.cshtml" />
+    <Content Include="Views\UserInfoes\Details.cshtml" />
+    <Content Include="Views\UserInfoes\Edit.cshtml" />
+    <Content Include="Views\UserInfoes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -380,6 +401,17 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201610271515171_InitialCreate.resx">
+      <DependentUpon>201610271515171_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610271528087_UserInfor.resx">
+      <DependentUpon>201610271528087_UserInfor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610271545039_UpdateUserInfoTBL.resx">
+      <DependentUpon>201610271545039_UpdateUserInfoTBL.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
